	- Startup errors will now lock out ALL commands other than '/manload'
	- Fix 'manuadd' to use the default or selected world (via 'manselect'), if the world is not specified in the command.
	- Expand GlobalGroups.yml and groups.yml to cover the VanishNoPacket plugin. Demonstrating how to negate and add nodes when using the '*' permission with inheritance.
	- Fix silly nested throw/catch statements. Errors are now correctly generated when reading yml's.
	- Unregister the worldsHolder as a service on a reload/shutdown instead of the whole plugin.
	- Update all code formatting to use tabs for indentation.
	- Stop using our own deprecated methods as we tell others to do.
	- Finally remove all deprecated methods.
	- Re-initialize the WorldsHolder on a reload, as un-registering and re-registering a new holder means all plugins have to check for the new service on every quiery.
	- Prevent null perms getting past the GlobalGroups loader.
	- Fix forgetting sub groups on a manload.
	- Allow 'manucheckp' to notify when superperms reports false but it is really negated.
	- Only output a Data update message if something has changed.
	- Fix loading users with only numerals in their names to be seen as strings.
	- Ignore any sub folders in the Worlds folder which start with a period (fix for storing data in svn respoitories).
	- Throw a better error than 'null' when someone removes all groups from a yml.
	- Stop force removing attachments and let Bukkit handle it's own mess.
	- Change to our own Yaml parsing for globalgroups instead of using the YAMLConfiguration class in bukkit.
	- Fix a cases sensitivity bug in world loading.
	- Stop using the YamlConfiguration in bukkit for our config handling. We can now support periods in world names.
	- Fix GlobalGroups not loading permission nodes.
	- Fix an error with Logging set to 'OFF' triggering a cast exception.
	- No more null errors from corrupt config.yml's.